Hid horizontal overflow to prevent horizontal scrolling

--- a/src/index.css
+++ b/src/index.css
@@ -21,4 +21,5 @@ code {
 #root{
   height: 100%;
   width: 100%;
+  overflow-x: hidden;
 }
